# realtime-pipeline

./: README.md  clickhouse_create_table_ddl.sql  docker-compose.yml  pyproject.toml  readEthereumData.py  read_ethereum_data.py  spark_subscriber.py
fs/volumes/clickhouse/etc/clickhouse-server/users.d/: default-user.xml
superset/: Dockerfile
