[tool.poetry]
name = "datalakehouse"
version = "0.1.0"
description = ""
authors = ["tomiwa-dev <adewoletomiwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
delta-spark = "^3.1.0"
confluent-kafka = "^2.4.0"
setuptools = "^69.5.1"
psycopg2 = "^2.9.9"
web3 = "^6.19.0"
python-dotenv = "^1.0.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
