[tool.poetry]
name = "realtime-pipeline"
version = "0.1.0"
description = ""
authors = ["Tomiwa-dev <adewoletomiwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-clickhouse = "^1.8.3"
web3 = "^7.2.0"
confluent-kafka = "^2.5.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
